--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "coffee-script": "~1.8.0",
     "coffeeify": "~0.7.0L",
     "grunt": "~0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-cssmin": "~0.10.0",
     "grunt-contrib-uglify": "~0.6.0",
