--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lscache": "^1.0.5",
     "mocha": "^2.3.4",
     "normalize.less": "^1.0.0",
+    "numeral": "^1.5.3",
     "object-assign": "^4.0.1",
     "object-path": "^0.9.2",
     "proxyquire": "^1.7.3",
