--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "react-login",
   "version": "0.0.0",
-  "description": "react-login app on React/Flux",
+  "description": "Login form in React/Flux",
   "author": "Radek Stepan <dev@radekstepan.com> (http://radekstepan.com)",
   "private": true,
   "license": "AGPL-3.0",
   "bin": {
-    "react-login": "./bin/react-login.js"
+    "react-login": "./bin/run.js"
   },
   "scripts": {
     "start": "make start",
@@ -30,7 +30,7 @@
     "deep-diff": "^0.3.3",
     "less": "^2.6.1",
     "lesshat": "^3.0.2",
-    "lodash": "^4.6.1",
+    "lodash": "^3.10.0",
     "mocha": "^2.4.5",
     "normalize.less": "^1.0.0",
     "object-assign": "^4.0.1",
@@ -38,6 +38,7 @@
     "proxyquire": "^1.7.4",
     "react": "^0.14.7",
     "react-addons-css-transition-group": "^0.14.7",
+    "react-dom": "^0.14.7",
     "react-mini-router": "^2.0.0",
     "uglify-js": "^2.6.2",
     "watch": "^0.17.1",
