--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "classnames": "^2.2.3",
     "clean-css": "^3.4.10",
     "deep-diff": "^0.3.3",
+    "email-regex": "^1.0.0",
     "less": "^2.6.1",
     "lesshat": "^3.0.2",
     "lodash": "^3.10.0",
