--- a/package.json
+++ b/package.json
@@ -5,16 +5,13 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "tap": "^10.3.0"
-  },
-  "scripts": {
-    "test": "tap test/*.js -R min"
+    "ava": "^0.18.2"
   },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@bitbucket.org/radekstepan/toptal-interview.git"
   },
-  "author": "",
+  "author": "Radek Stepan",
   "license": "ISC",
   "homepage": "https://bitbucket.org/radekstepan/toptal-interview#readme"
 }
