surrounded regions explore left and right columns

--- a/leetcode/surrounded-regions/fixtures/4x4.yaml
+++ b/leetcode/surrounded-regions/fixtures/4x4.yaml
@@ -1,11 +1,11 @@
 input: |
   XXXX
-  X--X
-  -X-X
-  X-XX
+  XOOX
+  OXOX
+  XOXX
 
-output: |
+expected: |
   XXXX
   XXXX
-  -XXX
-  X-XX
+  OXXX
+  XOXX
