--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node-sass-chokidar": "1.1.0",
     "normalize.css": "8.0.0",
     "npm-run-all": "4.1.2",
-    "path-to-regexp": "^2.2.0",
+    "path-to-regexp": "2.2.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-redux": "5.0.6"
