--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node-sass-chokidar": "1.1.0",
     "normalize.css": "8.0.0",
     "npm-run-all": "4.1.2",
+    "object-path": "0.11.4",
     "path-to-regexp": "2.2.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
