--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "path-to-regexp": "2.2.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
-    "react-redux": "5.0.6"
+    "react-redux": "5.0.6",
+    "sort-by": "1.2.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.0"
